--- a/package.json
+++ b/package.json
@@ -1,35 +1,49 @@
 {
-  "name": "@elastic/search-app-client",
-  "version": "1.0.0",
-  "description": "A Search Application Client for Elasticsearch",
-  "license": "Apache-2.0",
-  "main": "lib/cjs/index.js",
-  "module": "lib/esm/index.js",
-  "types": "lib/esm/index.d.ts",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
-  "scripts": {
-    "test-ci": "jest --runInBand",
-    "test": "jest",
-    "clean": "rimraf lib",
-    "watch-js": "./bin/watch-js",
-    "build-js": "./bin/build-js",
-    "build": "npm run clean && npm run build-js",
-    "watch": "npm run build && npm run watch-js",
-    "prepare": "npm run build"
-  },
-  "devDependencies": {
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  }
+    "name": "@elastic/search-app-client",
+    "version": "1.0.0",
+    "description": "A Search Application Client for Elasticsearch",
+    "license": "Apache-2.0",
+    "main": "lib/cjs/index.js",
+    "module": "lib/esm/index.js",
+    "types": "lib/esm/index.d.ts",
+    "directories": {
+        "lib": "lib",
+        "test": "__tests__"
+    },
+    "files": [
+        "lib"
+    ],
+    "scripts": {
+        "format": "prettier --ignore-unknown --ignore-path .gitignore .",
+        "format:write": "yarn format --write",
+        "lint": "eslint --ext *.ts,*.tsx,*.js,*.jsx --ignore-pattern '**/node_modules/**' --ignore-pattern '**/lib/**'",
+        "test-ci": "jest --runInBand",
+        "test": "jest",
+        "clean": "rimraf lib",
+        "watch-js": "./bin/watch-js",
+        "build-js": "./bin/build-js",
+        "build": "npm run clean && npm run build-js",
+        "watch": "npm run build && npm run watch-js",
+        "prepare": "husky install"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.59.8",
+        "@typescript-eslint/parser": "^5.59.8",
+        "eslint": "^8.41.0",
+        "eslint-config-prettier": "^8.8.0",
+        "husky": "^8.0.3",
+        "jest": "^29.5.0",
+        "lint-staged": "^13.2.2",
+        "prettier": "^2.8.8",
+        "ts-jest": "^29.1.0",
+        "typescript": "^5.0.4"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": "yarn lint",
+        "**/*": "yarn format"
+    },
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
+    }
 }
