--- a/.eslintrc
+++ b/.eslintrc
@@ -3,11 +3,13 @@
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
+        "plugin:jest/recommended",
         "prettier"
     ],
     "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint"],
+    "plugins": ["@typescript-eslint", "jest"],
     "env": {
-        "browser": true
+        "browser": true,
+        "jest": true
     }
 }
