--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
         "prepare": "husky install"
     },
     "devDependencies": {
+        "@types/jest": "^29.5.1",
         "@typescript-eslint/eslint-plugin": "^5.59.8",
         "@typescript-eslint/parser": "^5.59.8",
         "eslint": "^8.41.0",
         "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-jest": "^27.2.1",
         "husky": "^8.0.3",
         "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
         "lint-staged": "^13.2.2",
         "prettier": "^2.8.8",
         "ts-jest": "^29.1.0",
