--- a/package.json
+++ b/package.json
@@ -48,5 +48,10 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "@elastic/elasticsearch": "^8.8.0",
+    "cross-fetch": "^3.1.6",
+    "nock": "^13.3.1"
   }
 }
