--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format": "prettier --ignore-unknown --ignore-path .gitignore .",
     "format:write": "yarn format --write",
     "lint": "eslint --ext *.ts,*.tsx,*.js,*.jsx --ignore-pattern '**/node_modules/**' --ignore-pattern '**/lib/**'",
-    "test-ci": "jest --runInBand",
+    "test:ci": "jest --runInBand",
     "test": "jest",
     "clean": "rimraf lib",
     "build": "tsc",
