--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
-    "compilerOptions": {
-        "jsx": "react",
-        "target": "es2015",
-        "declaration": true,
-        "outDir": "lib",
-        "allowJs": true,
-        "skipLibCheck": true,
-        "strict": false,
-        "forceConsistentCasingInFileNames": true,
-        "esModuleInterop": true,
-        "module": "es2020",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true
-    },
-    "exclude": ["node_modules"],
-    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.js"]
+  "compilerOptions": {
+    "jsx": "react",
+    "target": "es2015",
+    "declaration": true,
+    "outDir": "lib",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "module": "es2020",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true
+  },
+  "exclude": ["node_modules"]
 }
