--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "yarn lint",
+    "*.{ts,tsx}": "tsc --noEmit",
     "**/*": "yarn format"
   },
   "publishConfig": {
