--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "format": "prettier --ignore-unknown --ignore-path .gitignore .",
     "format:write": "yarn format --write",
     "lint": "eslint --ext *.ts,*.tsx,*.js,*.jsx --ignore-pattern '**/node_modules/**' --ignore-pattern '**/dist/**' --ignore-pattern '**/build/**'",
+    "typecheck": "tsc --noEmit",
     "test:ci": "jest --runInBand",
     "test": "jest",
     "build": "tsup --minify",
     "watch": "tsup --watch",
     "prepare": "husky install",
-    "prepublish": "yarn build",
+    "prepublish": "yarn typecheck && yarn lint && yarn test && yarn build",
+    "changeset": "changeset",
+    "publish": "changeset version && changeset publish",
     "publish::local": "yarn build && cd examples/sandbox && rm -rf node_modules/@elastic/search-app-client && yarn add file:../../"
   },
   "devDependencies": {
@@ -39,7 +42,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "yarn lint",
-    "*.{ts,tsx}": "tsc --noEmit",
+    "*.{ts,tsx}": "yarn typecheck",
     "**/*": "yarn format"
   },
   "publishConfig": {
@@ -47,6 +50,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
+    "@changesets/cli": "^2.26.1",
     "@elastic/elasticsearch": "^8.8.0",
     "cross-fetch": "^3.1.6",
     "nock": "^13.3.1"
