--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
+    "@types/react": "^18.2.9",
+    "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.41.0",
