--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "yarn lint",
-    "*.{ts,tsx}": "yarn typecheck",
+    "*.{ts,tsx}": "yarn typecheck --resolveJsonModule --esModuleInterop",
     "**/*": "yarn format"
   },
   "publishConfig": {
