Fix codestyle by prettier

--- a/.github/workflows/types_check.yml
+++ b/.github/workflows/types_check.yml
@@ -2,9 +2,9 @@ name: Types check
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   typechecking:
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: "yarn"
+          cache: 'yarn'
 
       - name: Install dependencies
         run: yarn
