Fix update template command

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,17 @@
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "jest"],
+  "overrides": [
+    {
+      "files": ["./bin/*.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off"
+      },
+      "env": {
+        "node": true
+      }
+    }
+  ],
   "env": {
     "browser": true,
     "jest": true
