--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "./package": "./package.json",
     "./package.json": "./package.json"
   },
+  "type": "module",
   "files": [
+    "bin",
     "dist"
   ],
+  "bin": {
+    "update-template": "./bin/template.js"
+  },
   "scripts": {
     "format": "prettier --ignore-unknown --ignore-path .gitignore .",
     "format:write": "yarn format --write",
@@ -29,7 +34,7 @@
     "build": "tsup --minify",
     "watch": "tsup --watch",
     "prepare": "husky install",
-    "update::template": "node bin/template.mjs",
+    "update::template": "node bin/template.js",
     "prepublish": "yarn typecheck && yarn lint && yarn test && yarn build",
     "changeset": "changeset",
     "publish": "changeset version && changeset publish",
