--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "jsdelivr": "dist/index.global.js",
+  "keywords": [
+    "search",
+    "elastic",
+    "elasticsearch"
+  ],
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
