--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic/search-application-client",
-  "version": "8.9.0",
+  "version": "8.9.0-1",
   "description": "A Search Application Client for Elasticsearch",
   "license": "Apache-2.0",
   "types": "dist/index.d.ts",
