--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,5 @@
 {
-  "preset": "ts-jest/presets/js-with-ts-esm",
+  "preset": "ts-jest",
   "testPathIgnorePatterns": ["./lib"],
   "testEnvironment": "jsdom"
 }
