Add turbo and refactor project structure

--- a/packages/search-application-client/.eslintrc
+++ b/packages/search-application-client/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "root": true,
+  "ignorePatterns": ["dist/", "node_modules/"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
