--- a/packages/search-application-client/tsconfig.json
+++ b/packages/search-application-client/tsconfig.json
@@ -15,5 +15,5 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "exclude": ["node_modules", "dist", "examples"]
+  "exclude": ["node_modules", "dist"]
 }
