--- a/.github/workflows/type_check.yml
+++ b/.github/workflows/type_check.yml
@@ -1,4 +1,4 @@
-name: Types check
+name: Type check
 
 on:
   push:
@@ -24,5 +24,5 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Types check
-        run: yarn typecheck
+      - name: Type check
+        run: yarn type-check
