--- a/packages/search-application-client/package.json
+++ b/packages/search-application-client/package.json
@@ -25,14 +25,15 @@
     "dist"
   ],
   "bin": {
-    "update-template": "./bin/template.js"
+    "update-template": "bin/template.js"
   },
   "scripts": {
     "build": "tsup --minify",
     "dev": "tsup --watch",
     "lint": "eslint .",
     "type-check": "tsc --noEmit",
-    "test": "jest"
+    "test": "jest",
+    "update::template": "node bin/template.js"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
@@ -46,7 +47,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "ts-jest": "^29.1.0",
-    "tsup": "^6.7.0",
+    "tsup": "^8.0.1",
     "typescript": "^5.0.4"
   },
   "publishConfig": {
