Update api error tests

--- a/packages/search-application-client/.eslintrc
+++ b/packages/search-application-client/.eslintrc
@@ -17,6 +17,11 @@
       "env": {
         "node": true
       }
+    },{
+      "files": ["*.test.ts"],
+      "rules": {
+        "jest/no-conditional-expect": "off"
+      }
     }
   ],
   "env": {
